cvhange to python 2.7 because botocore is only available for 2.7 on amazon linux

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [bdist_rpm]
 packager = cloud team @ IS24 <is24-it-cloud-team@immobilienscout24.de>
-requires = python >= 2.7 python-boto python-docopt
+requires = python27 python-boto python-docopt
 no_autoreq = True
 [build]
 executable = /usr/bin/python2.7
