change to python 2.6.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [bdist_rpm]
 packager = cloud team @ IS24 <is24-it-cloud-team@immobilienscout24.de>
-requires = python27 python-boto python-docopt
+requires = python26 python26-boto python26-botocore python-docopt
 no_autoreq = True
 [build]
-executable = /usr/bin/python2.7
+executable = /usr/bin/python2.6
