--- a/misc/cfn-signal-elb-healthcheck.conf
+++ b/misc/cfn-signal-elb-healthcheck.conf
@@ -2,14 +2,13 @@ start on stopped rc RUNLEVEL=[2345]
 description "Start CFN Signal Handler that signals that our ELB thinks we are healthy"
 task
 respawn
+
 script
     set +o posix
     source /etc/profile
-    /usr/libexec/is24-awslogs-configurator \
-        ${is24_aws_cloudwatch_loggroup:-no_log_group} \
-        /etc/awslogs/awslogs.conf \
-        /etc/awslogs/conf.d/*.conf
+    /usr/bin/cfn-signal.elb-healthceck \
+        ${is24_aws_elb_name} \
+        ${is24_aws_autoscalinggroup_logical_id} \
+        ${is24_aws_stackname}
 
-    export AWS_CONFIG_FILE=/etc/awslogs/awscli.conf HOME=/root
-    exec nice -n 4 aws logs push --config-file /etc/awslogs/awslogs.conf &>> /var/log/awslogs.log
 end script
