--- a/misc/cfn-signal-elb-healthcheck.conf
+++ b/misc/cfn-signal-elb-healthcheck.conf
@@ -6,7 +6,8 @@ respawn
 script
     set +o posix
     source /etc/profile
-    /usr/bin/cfn-signal.elb-healthceck \
+    exec &> >(logger -t cfn-signal-elb-healthcheck)
+    cfn-signal-elb-healthcheck \
         ${is24_aws_elb_name} \
         ${is24_aws_autoscalinggroup_logical_id} \
         ${is24_aws_stackname}
