introduce seperate env var autoscaling stack name for embedded stacks

--- a/misc/cfn-signal-elb-healthcheck.conf
+++ b/misc/cfn-signal-elb-healthcheck.conf
@@ -10,6 +10,6 @@ script
     cfn-signal-elb-healthcheck \
         ${is24_aws_elb_name} \
         ${is24_aws_autoscalinggroup_logical_id} \
-        ${is24_aws_stackname}
+        ${is24_aws_autoscaling_stackname}
 
 end script
