--- a/misc/cfn-signal-elb-healthcheck.conf
+++ b/misc/cfn-signal-elb-healthcheck.conf
@@ -7,6 +7,10 @@ script
     set +o posix
     source /etc/profile
     exec &> >(logger -t cfn-signal-elb-healthcheck)
+
+    # temp for debugging
+    aws elb describe-instance-health --region eu-west-1 --load-balancer-name ${is24_aws_elb_name}
+
     cfn-signal-elb-healthcheck \
         ${is24_aws_elb_name} \
         ${is24_aws_autoscalinggroup_logical_id} \
